--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "tsc": "tsc -p tsconfig.json",
     "clean": "tsc -b --clean",
     "test": "npm run lint -- --fix && npm run test-local",
-    "test-local": "chair-bin test",
+    "test-local": "egg-bin test",
+    "benchmark": "node ./benchmark/ajv-vs-paramter.mjs",
     "cov": "egg-bin cov",
     "lint": "eslint . --ext .ts",
     "ci": "npm run lint && npm run cov",
