--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "typescript": true
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=14.0.0"
   },
   "scripts": {
     "build": "npm run tsc",
@@ -71,7 +71,7 @@
     "os": {
       "travis": "linux"
     },
-    "version": "10, 14"
+    "version": "14"
   },
   "repository": {
     "type": "git",
