--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "egg-typebox-validate",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "another validate for typescript egg projects",
   "eggPlugin": {
     "name": "typeboxValidate"
@@ -43,6 +43,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "parameter": "^3.6.0",
     "prettier": "^2.3.1",
+    "semver": "^7.3.5",
     "typescript": "^4.2.4"
   },
   "egg": {
@@ -54,7 +55,8 @@
   "scripts": {
     "build": "npm run tsc",
     "tsc": "tsc -p tsconfig.json",
-    "clean": "rm -rf app/**/*.js",
+    "tsc:noEmit": "tsc -p tsconfig.json --noEmit",
+    "clean": "rm -rf app/**/*.js && rm -rf app.js",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
     "benchmark": "node ./benchmark/ajv-vs-parameter.mjs",
@@ -65,7 +67,8 @@
   },
   "files": [
     "index.d.ts",
-    "app/**/*.js"
+    "app/**/*.js",
+    "app.js"
   ],
   "ci": {
     "type": "travis",
